--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Adrien Millot <2701@holbertonschool.com>
-Alrick Deperiers <2794@holbertonschool.com>
+Seid H Muhammed <seid.hamid2@gmail.com>
+Amanuel Mekonnen  <amanuelmekonnengebretsadik@gmail.com>
