--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This task was done by:
 
-Seid Hamid <seid.hamid2@gmail.com>
-Amanuel Mekonnen <amanuelmekonnengebretsadik@gmail.com>
+Seid Hamid https://github.com/radu2022
+AmanKiya Amanuel Mekonnen Gebretsadik
